<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2021 Oracle and/or its affiliates. All rights reserved.
    This program and the accompanying materials are made available under the
    terms of the Eclipse Public License v. 2.0, which is available at
    http://www.eclipse.org/legal/epl-2.0.
    This Source Code may also be made available under the following Secondary
    Licenses when the conditions for such availability set forth in the
    Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
    version 2 with the GNU Classpath Exception, which is available at
    https://www.gnu.org/software/classpath/license.html.
    SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.eclipse.ee4j</groupId>
        <artifactId>project</artifactId>
        <version>1.0.6</version>
    </parent>

    <groupId>jakarta.enterprise.concurrent</groupId>
    <artifactId>jakarta.enterprise.concurrent-tck</artifactId>
    <version>2.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Jakarta Concurrency TCK</name>
    <description>Jakarta Concurrency TCK Tests</description>

    <licenses>
        <license>
            <name>Eclipse Public License 2.0</name>
            <url>https://projects.eclipse.org/license/epl-2.0</url>
            <distribution>repo</distribution>
        </license>
        <license>
            <name>GNU General Public License, version 2 with the GNU Classpath Exception</name>
            <url>https://projects.eclipse.org/license/secondary-gpl-2.0-cp</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
        
        <jakarta.concurrent.version>2.0.0</jakarta.concurrent.version>
        <jakarta.servlet.version>5.0.0</jakarta.servlet.version>
        <jakarta.ejb.version>4.0.0</jakarta.ejb.version>
        <jakarta.annotation.version>2.0.0</jakarta.annotation.version>
        
        <testng.version>6.14.3</testng.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>jakarta.enterprise.concurrent</groupId>
            <artifactId>jakarta.enterprise.concurrent-api</artifactId>
            <version>${jakarta.concurrent.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
    		<groupId>jakarta.servlet</groupId>
    		<artifactId>jakarta.servlet-api</artifactId>
            <version>${jakarta.servlet.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
		    <groupId>jakarta.ejb</groupId>
		    <artifactId>jakarta.ejb-api</artifactId>
		    <version>${jakarta.ejb.version}</version>
		    <scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>jakarta.annotation</groupId>
		    <artifactId>jakarta.annotation-api</artifactId>
		    <version>${jakarta.annotation.version}</version>
		    <scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>